--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
     <version>0.1.0</version>
     <!-- Avoid using \ in this description, as they can cause the description to fail to load. -->
     <!-- If you really want to use them, you'll need to "escape" them by putting another one in front, like \\ -->
-    <description>This allows replacing character skins with skins from Princess Connect characters.</description>
+    <description>This allows replacing character skins with skins from Princess Connect characters.\nOriginal mods by Leucogeranus7744</description>
 
     <!--You shouldn't need to change anything below this point, but feel free to look at it.-->
     <!--You'll get a warning regarding these when you package your mod, but don't worry, it's just set up like this for convenience.-->
